# OpenCLPlayground

./: CMakeLists.txt
kernels/: saxpy.cl  sgemm.cl
source/: cl_utils.cpp  cl_utils.hpp  config.hpp  main.cpp  saxpy_demo.cpp
source/cl/: cl_error.cpp  cl_error.hpp  cl_utils.cpp  cl_utils.hpp
source/demo/: saxpy_demo.cpp  saxpy_demo.hpp  sgemm_demo.cpp  sgemm_demo.hpp
